added historic logging

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       <h1>Poker Tracker</h1>
     </header>
     <main>
+      <aside id="history">
+        <h2>Historic Entries</h2>
+        <ul id="sessionList">
+          <!-- Saved session references will be added here -->
+        </ul>
+      </aside>
       <section id="tracker">
         <h2>Running Total</h2>
         <p id="total">$0.00</p>
@@ -31,6 +37,7 @@
       </section>
       <section id="entries">
         <h2>Entries</h2>
+        <button id="saveButton">Save Session</button>
         <ul id="entryList">
           <!-- Entries will be dynamically added here -->
         </ul>
